@@ -4,13 +4,13 @@
  *
  * This file contains protocol support for Ultimate3 ircd.
  *
- * $Id: ultimate3.c 4269 2005-12-29 01:39:38Z nenolod $
+ * $Id: ultimate3.c 4481 2006-01-04 15:24:07Z jilles $
  */
 
 #include "atheme.h"
 #include "protocol/ultimate3.h"
 
-DECLARE_MODULE_V1("protocol/ultimate3", TRUE, _modinit, NULL, "$Id: ultimate3.c 4269 2005-12-29 01:39:38Z nenolod $", "Atheme Development Group <http://www.atheme.org>");
+DECLARE_MODULE_V1("protocol/ultimate3", TRUE, _modinit, NULL, "$Id: ultimate3.c 4481 2006-01-04 15:24:07Z jilles $", "Atheme Development Group <http://www.atheme.org>");
 
 /* *INDENT-OFF* */
 
@@ -707,12 +707,10 @@ static void m_kick(char *origin, uint8_t parc, char *parv[])
 
 	chanuser_delete(c, u);
 
-	/*
-	 * if they kicked us, let's rejoin 
-	 */
-	if (!irccasecmp(chansvs.nick, parv[1]))
+	/* if they kicked us, let's rejoin */
+	if (is_internal_client(u))
 	{
-		slog(LG_DEBUG, "m_kick(): i got kicked from `%s'; rejoining", parv[0]);
+		slog(LG_DEBUG, "m_kick(): %s got kicked from %s; rejoining", u->nick, parv[0]);
 		join(parv[0], parv[1]);
 	}
 }
